Project Page CSS: fixed cell collapses

--- a/src/app/Components/project/project.component.css
+++ b/src/app/Components/project/project.component.css
@@ -20,7 +20,7 @@
 .container {
   display: grid;
   grid-template-columns: minmax(40em ,1fr);
-  grid-template-rows: 0.1fr repeat(3, 25vh);
+  grid-template-rows: 0.1fr repeat(6, 25vh);
   grid-gap: 10px;
 }
 .back img {
